fix sidebar logo margin on mobile

--- a/scss/_patterns_navigation.scss
+++ b/scss/_patterns_navigation.scss
@@ -74,10 +74,7 @@ $nav-border-bottom-thickness: $px;
       display: flex;
       flex: 0 0 auto;
       // margin: $spv-intra--expanded $sph-intra $spv-inter--scaleable $grid-margin-width;
-
-      @media (min-width: $breakpoint-navigation-threshold + 1) {
-        margin-left: 0;
-      }
+      margin-left: 0;
 
       .p-navigation__image {
         height: 24px;
